Chapter10/pod_secret_flex.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret-flex
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: test
      mountPath: /etc/secret/
      readOnly: true
  volumes:
  - name: test
    flexVolume:
      driver: "azure/kv"
      secretRef:
        name: kvcreds                             
      options:
        keyvaultname: <keyvault name>           
        keyvaultobjectnames: k8s-secret-demo
        keyvaultobjecttypes: secret               
        tenantid: "<tenant ID>"
